--- a/html/practice-photo-1.html
+++ b/html/practice-photo-1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <html lang="en">
             
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../main.css">
     <link rel="icon" type="image/png" href="../pics/favicon.png">
 
     <link rel="stylesheet" href="https://use.typekit.net/fgh5uly.css">
