--- a/html/practice-photo-1.html
+++ b/html/practice-photo-1.html
@@ -31,9 +31,9 @@
 
                 <li> <a href="../html/intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-                <li> <a href="../html/practice.html">An opportunity to practice</a> </li>
-
                 <li> <a href="../html/workshop.html">Workshop</a> </li>
+
+                <li> <a href="../html/practice.html">Practice</a> </li>
 
                 <li> <a href="../html/resource-library.html">Resource Library</a> </li>
 
@@ -44,7 +44,7 @@
     <div class="middle-section">
         <div class="main-text-container">
 
-        <h1 style="text-align: center;">An Opportunity to Practice</h1>
+        <h1 style="text-align: center;">Practice</h1>
 
         <button class="back">
             <a href="../html/practice.html">Back</a>
@@ -64,8 +64,8 @@
 
     <div class="right-section">
         <div class="top-menu" id="customizeMenu">
-            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: center;"> 
-                <img src="../pics/customize.png" alt="Customize page."> 
+            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
+                <img src="../pics/customize.png" alt="Customize page."> Customize
             </button>
             <button class="close-button" onclick="toggleCustomize()">&times;</button>
             <div class="customize">
