--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -30,9 +30,9 @@
 
                 <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-                <li> <a href="practice.html">An opportunity to practice</a> </li>
-
                 <li> <a href="workshop.html">Workshop</a> </li>
+
+                <li> <a href="practice.html">Practice</a> </li>
 
                 <li> <a href="resource-library.html">Resource Library</a> </li>
 
@@ -78,8 +78,8 @@
 
     <div class="right-section">
         <div class="top-menu" id="customizeMenu">
-            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: center;"> 
-                <img src="../pics/customize.png" alt="Customize page."> 
+            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
+                <img src="../pics/customize.png" alt="Customize page."> Customize
             </button>
             <button class="close-button" onclick="toggleCustomize()">&times;</button>
             <div class="customize">
