--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>1,000 Words - home</title>
+    <title>1,000 Words</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <html lang="en">
             
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/png" href="../pics/favicon.png">
+    <link rel="icon" type="image/png" href="pics/favicon.png">
 
     <link rel="stylesheet" href="https://use.typekit.net/fgh5uly.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Lora?stroke=Serif">
@@ -30,9 +30,9 @@
 
                 <li> <a href="html/intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-                <li> <a href="html/practice.html">An opportunity to practice</a> </li>
-
                 <li> <a href="html/workshop.html">Workshop</a> </li>
+
+                <li> <a href="html/practice.html">Practice</a> </li>
 
                 <li> <a href="html/resource-library.html">Resource Library</a> </li>
 
@@ -50,9 +50,9 @@
 
             <li> <a href="html/intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-            <li> <a href="html/practice.html">An opportunity to practice</a> </li>
-
             <li> <a href="html/workshop.html">Workshop</a> </li>
+
+            <li> <a href="html/practice.html">Practice</a> </li>
 
             <li> <a href="html/resource-library.html">Resource Library</a> </li>
         </ul>
@@ -62,8 +62,8 @@
 
     <div class="right-section">
         <div class="top-menu" id="customizeMenu">
-            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: center;"> 
-                <img src="../pics/customize.png" alt="Customize page."> 
+            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
+                <img src="pics/customize.png" alt="Customize page."> Customize
             </button>
             <button class="close-button" onclick="toggleCustomize()">&times;</button>
             <div class="customize">
