--- a/html/workshop.html
+++ b/html/workshop.html
@@ -30,9 +30,9 @@
 
                 <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-                <li> <a href="practice.html">An opportunity to practice</a> </li>
-
                 <li> <a href="workshop.html">Workshop</a> </li>
+
+                <li> <a href="practice.html">Practice</a> </li>
 
                 <li> <a href="resource-library.html">Resource Library</a> </li>
 
@@ -50,16 +50,21 @@
 
         <p> sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample </p>
 
-        <button class="next-page">
-            <a href="resource-library.html">Resource Library</a>
-        </button>
+        <div class="next-page">
+            Next page
+            
+             <button class="next-page-button">
+                 <a href="practice.html">Practice</a>
+             </button>
+         </div>
+
     </div>
 </div>
 
     <div class="right-section">
         <div class="top-menu" id="customizeMenu">
-            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: center;"> 
-                <img src="../pics/customize.png" alt="Customize page."> 
+            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
+                <img src="../pics/customize.png" alt="Customize page." style="padding-right: 3px;"> Customize
             </button>
             <button class="close-button" onclick="toggleCustomize()">&times;</button>
             <div class="customize">
@@ -74,7 +79,7 @@
                 </div>
                 <div class="color-change-container">
                     <div class="color-change-1">
-                        <button>White background, <br> black text</button>
+                        <button class="light-mode">White background, <br> black text</button>
                     </div>
                     <div class="color-change-2">
                         <button>Black background, <br> white text</button>
