--- a/html/intro-to-alt-text.html
+++ b/html/intro-to-alt-text.html
@@ -360,20 +360,20 @@
                     <a href="https://www.freepik.com/free-photo/australian-white-tree-frog-sitting-flower_17721898.htm#query=orange%20frog&position=0&from_view=keyword&track=ais&uuid=98768eff-119a-4064-bbae-ce52fbece170">
                         <img src="../pics/tree-frog.jpg" alt=" " style="width: 60%;">
                     </a>
-                        <figcaption> Close-up shot of a small, green treefrog clinging to the center of an orange flower.
+                        <figcaption> "Close-up shot of a small, green treefrog clinging to the center of an orange flower."
                             <a href="https://www.freepik.com/free-photo/australian-white-tree-frog-sitting-flower_17721898.htm#query=orange%20frog&position=0&from_view=keyword&track=ais&uuid=98768eff-119a-4064-bbae-ce52fbece170"> (Image by kuritafsheen77</a> on Freepik)
                         </figcaption>
                         </figure>
             
                         <figure class="image-center">
                             <img src="../pics/bitter-sneezeweed.jpg" alt=" " style="width: 60%;">
-                            <figcaption> Small, bright yellow wildflowers amongst a bed of green grass.
+                            <figcaption> "Small, bright yellow wildflowers amongst a bed of green grass."
                             </figcaption>
                             </figure>
             
                         <figure class="image-center">
                             <img src="../pics/dog-getting-kisses-by-cows.jpg" alt=" " style="width: 50%;">
-                            <figcaption> A dog wears an enormous smile while getting kisses and attention from a group of cows. <br>
+                            <figcaption> "A dog wears an enormous smile while getting kisses and attention from a group of cows." <br>
                                 <a href="https://www.are.na/block/623323" target="_blank" rel="noreferrer noopener"> Image source </a>
                                 </figcaption>
                         </figure>
