--- a/html/practice.html
+++ b/html/practice.html
@@ -43,7 +43,7 @@
 
     <div class="middle-section">
         <div class="main-text-container">
-        <h1 style="text-align: center;">An opportunity to practice</h1>
+        <h1 style="text-align: center;">Practice</h1>
         <p> (Insert instructions / prompt. Have users be able to submit their response. Thinking maybe have people be able to click each photo and it takes you to it's own page for that specific photo with all the submitted reponses? Maybe have a character counter that people can use to try and practice keeping their alt text brief?)</p>
 
         <a href="practice-photo-1.html">
@@ -65,7 +65,8 @@
     <div class="right-section">
         <div class="top-menu" id="customizeMenu">
             <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
-                <img src="../pics/customize.png" alt="Customize page.">Customize
+                <img class="customize-icon-light-mode" src="../pics/customize.png" alt="Customize page."> 
+                <img class="customize-icon-dark-mode" src="../pics/customize-2.png" alt="Customize page."> 
             </button>
             <button class="close-button" onclick="toggleCustomize()">&times;</button>
             <div class="customize">
@@ -80,10 +81,10 @@
                 </div>
                 <div class="color-change-container">
                     <div class="color-change-1">
-                        <button>White background, <br> black text</button>
+                        <button class="light-mode-button">White background, <br> black text</button>
                     </div>
                     <div class="color-change-2">
-                        <button>Black background, <br> white text</button>
+                        <button class="dark-mode-button">Black background, <br> white text</button>
                     </div>
                 </div>
             </div>
@@ -101,7 +102,7 @@
         topMenu.classList.toggle("open");
         if (topMenu.classList.contains("open")) {
             topMenu.style.height = "100vh";
-            topMenu.style.width = "65vw";
+            topMenu.style.width = "20vw";
         } else {
             topMenu.style.height = "fit-content";
             topMenu.style.width = "20vw";
