1,000 words- some updates

--- a/html/practice.html
+++ b/html/practice.html
@@ -31,7 +31,7 @@
 
                 <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-                <li> <a href="workshop.html">Workshop</a> </li>
+                <!-- <li> <a href="workshop.html">Workshop</a> </li> -->
 
                 <li> <a href="practice.html">Practice</a> </li>
 
@@ -39,16 +39,47 @@
 
             </ul>
         </div>
+
+        <img src="../pics/scans/practice-left.jpg" alt="" style="width: 20vw; height: 100%;">
     </div>
 
     <div class="middle-section">
         <div class="main-text-container">
-        <h1 style="text-align: center;">Practice</h1>
-        <p> (Insert instructions / prompt. Have users be able to submit their response. Thinking maybe have people be able to click each photo and it takes you to it's own page for that specific photo with all the submitted reponses? Maybe have a character counter that people can use to try and practice keeping their alt text brief?)</p>
+        <h1 style="text-align: center; margin-bottom: 20px;">Practice</h1>
+        <p> (Insert instructions / prompt. Have users be able to submit their response. Thinking maybe have people be able to click each photo and it takes you to it's own page for that specific photo with all the submitted reponses?)</p>
 
-        <a href="practice-photo-1.html">
-            <img src="../pics/lacey-white-flowers-sit-in-outstretched-water.jpg" alt="Delicate, lacey, white flowers poke out of water that reflects a blue sky with soft, white clouds." style="max-width: 400px; padding-bottom: 40px;">
-        </a>
+
+        <img src="../pics/scans/ladybugs-on-daisies.png" alt="2 ladybugs visit white daisies in front of wooden fence with peeling green paint." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+
+        <img src="../pics/scans/dalmation-leaping-through-air.png" alt="Dalmation soars through the air, mid-leap." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+
+        <img src="../pics/scans/geese-flying-through-a-golden-sky.png" alt="Geese flying through a golden sky." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+
+        <img src="../pics/scans/giant-sunflowers-against-blue-sky.jpg" alt="Giant sunflowers against a bright blue sky." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+
+        <img src="../pics/scans/penguins.jpg" alt="Group of penguins standing on a rocky surface in front of calm water that reflects their images like a mirror." style="width: 40%; padding-top: 40px; padding-bottom: 40px;">
+
+        <img src="../pics/scans/yellow-lab-puppies.png" alt="3 yellow lab puppies peeking out of a barn." style="width: 40%; padding-top: 40px; padding-bottom: 40px;">
+
+    
+        <figure class="image-center">
+        <img src="../pics/homepage-pics/singular-ripple-in-lake.jpg" alt="Singular ripple in calm water that reflects tree line." style="width: 70%; padding-top: 20px; padding-bottom: 20px;"> 
+            <figcaption style="position: relative; bottom: 15px;"> 
+                <a href="https://www.are.na/block/1808883" target="_blank" rel="noopener noreferrer">Image Source</a>
+            </figcaption>
+        </figure>
+
+
+        <figure class="image-center">
+            <img src="../pics/cats-with-flower-crowns.jpg" alt="Two smiling cats weaing daisy-like flower crowns cuddle together on tree-stumps in a forest." style="width: 100%; padding-top: 20px; padding-bottom: 20px;"> 
+                <figcaption style="position: relative; bottom: 15px;"> 
+                    <a href="https://www.tumblr.com/cybergata/121802161240/shironeko-kuro-mimi-toro-and-a-chibi-brother" target="_blank" rel="noopener noreferrer">Image Source</a>
+                </figcaption>
+            </figure>
+
+        <p style="background-color: yellow;"> reorder, probably add more photos </p>
+
+
 
         <div class="next-page">
             Next page
@@ -89,6 +120,8 @@
                 </div>
             </div>
         </div>
+
+        <img src="../pics/scans/practice-right.jpg" alt="" style="width: 20vw; height: 100%;">
     </div>
 
 </div>
