--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -30,7 +30,7 @@
 
                 <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
 
-                <li> <a href="workshop.html">Workshop</a> </li>
+                <!-- <li> <a href="workshop.html">Workshop</a> </li> -->
 
                 <li> <a href="practice.html">Practice</a> </li>
 
@@ -38,11 +38,13 @@
 
             </ul>
         </div>
+
+        <img src="../pics/scans/library-left.jpg" alt="" style="width: 20vw; height: 100%;">
     </div>
 
-    <div class="middle-section">
+    <div class="middle-section" style="border-right: none;">
         <div class="main-text-container">
-        <h1 style="text-align: center;">Resource Library / Sources </h1>
+        <h1 style="text-align: center; margin-bottom: 20px;"> Resource Library / Sources </h1>
 
         <!-- <ul>
             <li> 
@@ -55,7 +57,9 @@
                 <a href="https://alt-text-as-poetry.net/" target="_blank" rel="noreferrer noopener">  Alt Text as Poetry </a> 
                 <ul>
                     <li>
-                project by Bojana Coklyat and Shannon Finnegan
+                Really lovely project by Bojana Coklyat and Shannon Finnegan. Encourages people to put more care and attention into alt text / image description - going further than just "checking a compliance box" and moreso trying to build digital spaces that screen reader users would actually want to spend time in.
+                    </li>
+                    <li style="background-color: yellow;"> include workbook pdf / google doc / soundcloud
                     </li>
                 </ul>
             </li>
@@ -71,7 +75,114 @@
                 </ul>
             </li>
 
-            <li> Need to include the rest</li>
+            <li>
+                <a href="https://accessibility.huit.harvard.edu/describe-content-images" target="_blank" rel="noreferrer noopener"> Write helpful Alt Text to describe images</a>
+                <ul>
+                    <li>Article from Digital Accessibility Services at Harvard University
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="https://accessibility.huit.harvard.edu/describe-content-images" target="_blank" rel="noreferrer noopener"> Write helpful Alt Text to describe images</a>
+                <ul>
+                    <li>Article from Digital Accessibility Services at Harvard University
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://www.seewritehear.com/learn/alt-text-and-image-description/" target="_blank" rel="noreferrer noopener"> Alt Text and Image Description</a>
+                <ul>
+                    <li>Article from <a href="https://www.seewritehear.com/" target="_blank" rel="noopener noreferrer">SeeWriteHear</a>
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://webaim.org/techniques/alttext/" target="_blank" rel="noreferrer noopener"> Alternative Text</a>
+                <ul>
+                    <li>Article from <a href="https://webaim.org/" target="_blank" rel="noopener noreferrer">WebAIM</a>, which stands for Web Accessibility in Mind. WebAIM is a widely respected organization that focuses on digital accessibility. They offer all sorts of helpful tools such as this <a href="https://webaim.org/resources/contrastchecker/" target="_blank" rel="noopener noreferrer">Color contrast checker</a> where you can check to see if a pair of colors has enough contrast between them in order to be accessible. They also have this really neat tool called <a href="https://wave.webaim.org/" target="_blank" rel="noopener noreferrer"> WAVE</a> which is an accessibility evaluation tool that you can use to check your website for accessibility errors / issues. You can simply copy and paste your published website URL on <a href="https://wave.webaim.org/" target="_blank" rel="noopener noreferrer"> this website</a>, and the WAVE tool will point out accessibility errors / concerns and you can even read more about what they mean. You can also add it as a browser extension so that you can access the WAVE tool quickly.
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://aceseditors.org/news/2020/how-to-write-great-alt-text-and-why-it-matters" target="_blank" rel="noreferrer noopener"> How to write great alt text — And why it matters</a>
+                <ul>
+                    <li>Article by Pamela S. Hogle and Deni Elliott
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="https://digital.va.gov/accessibility/getting-started/alt-text/" target="_blank" rel="noreferrer noopener"> Alt Text</a>
+                <ul>
+                    <li>Article from <a href="https://digital.va.gov/accessibility/" target="_blank" rel="noopener noreferrer">DigitalVA's Accessibility Guide</a>
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://udayton.edu/blogs/onlinelearning/2021/07_07_2021_alttext.php" target="_blank" rel="noreferrer noopener"> Accessibility Tip #2: Writing Good Alt Text</a>
+                <ul>
+                    <li>Blog entry by Paul Dagnall, written for University of Dayton Blogs
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://uxdesign.cc/how-to-write-an-image-description-2f30d3bf5546" target="_blank" rel="noreferrer noopener"> How to write an image description</a>
+                <ul>
+                    <li>Article written by Alex Chen, written with insights from Bex Leon and Robin Fanning for Medium.com.
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://www.w3.org/WAI/tutorials/images/decision-tree/" target="_blank" rel="noreferrer noopener"> An alt Decision Tree</a>
+                <ul>
+                    <li>A tutorial provided by the <a href=" https://www.w3.org/WAI/" target="_blank" rel="noopener noreferrer"> W3C Web Accessibility Initiative (WAI)</a> that helps guide you through the thought process of writing alt text, through the form of a decision tree.
+                    </li>
+                </ul>
+            </li>
+
+
+            <li>
+                <a href="https://www.reddit.com/r/Blind/comments/pqhm8o/image_description_alt_text_or_both/" target="_blank" rel="noreferrer noopener"> Image description, alt text or both? </a>
+                <ul>
+                    <li>Reddit forum on a subreddit called "r/Blind", which is a subreddit geared towards the Blind and Visually Impaired Community. The author of the post is a sighted person who wanted to know if people generally prefer having both alt text and image descriptions, or if they should just include one or the other.
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="https://alttexthalloffame.org/en/" target="_blank" rel="noreferrer noopener"> Alt Text Hall of Fame</a>
+                <ul>
+                    <li style="background-color: yellow;"> ****WRITE DESCRIPTION
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="https://axesslab.com/alt-texts/" target="_blank" rel="noreferrer noopener"> Alt-Texts: The Ultimate Guide</a>
+                <ul>
+                    <li style="background-color: yellow;"> ****WRITE DESCRIPTION
+                    </li>
+                </ul>
+            </li>
+
+            <br><br>
+
+            <li style="background-color: lime;"> REORDER
+            </li>
+
         </ul>
     </div>
 </div>
@@ -103,6 +214,8 @@
                 </div>
             </div>
         </div>
+
+        <img src="../pics/scans/library-right.jpg" alt="" style="width: 20vw; height: 100%;">
     </div>
 
 </div>
