--- a/html/about.html
+++ b/html/about.html
@@ -24,17 +24,17 @@
             <button class="close-button" onclick="toggleMenu()">&times;</button>
             <ul class="menu-items">
 
-                <li> <a href="../index.html">Home</a> </li>
+                <a href="../index.html"> <li> Home </li> </a>
 
-                <li> <a href="about.html">About</a> </li>
+                <a href="about.html"> <li>About</li> </a> 
 
-                <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
+                <a href="intro-to-alt-text.html"> <li>An introduction to alt text</li> </a> 
 
-                <!-- <li> <a href="workshop.html">Workshop</a> </li> -->
+                <!-- <a href="workshop.html"> <li> Workshop </li> </a> -->
 
-                <li> <a href="practice.html">Practice</a> </li>
+                <a href="practice.html"> <li>Practice</li> </a> 
 
-                <li> <a href="resource-library.html">Resource Library</a> </li>
+                <a href="resource-library.html"> <li>Resource Library</li> </a> 
 
             </ul>
         </div>
