--- a/html/practice.html
+++ b/html/practice.html
@@ -25,17 +25,17 @@
             <button class="close-button" onclick="toggleMenu()">&times;</button>
             <ul class="menu-items">
 
-                <li> <a href="../index.html">Home</a> </li>
+                <a href="../index.html"> <li> Home </li> </a>
 
-                <li> <a href="about.html">About</a> </li>
+                <a href="about.html"> <li>About</li> </a> 
 
-                <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
+                <a href="intro-to-alt-text.html"> <li>An introduction to alt text</li> </a> 
 
-                <!-- <li> <a href="workshop.html">Workshop</a> </li> -->
+                <!-- <a href="workshop.html"> <li> Workshop </li> </a> -->
 
-                <li> <a href="practice.html">Practice</a> </li>
+                <a href="practice.html"> <li>Practice</li> </a> 
 
-                <li> <a href="resource-library.html">Resource Library</a> </li>
+                <a href="resource-library.html"> <li>Resource Library</li> </a> 
 
             </ul>
         </div>
@@ -72,12 +72,10 @@
 
         <figure class="image-center">
             <img src="../pics/cats-with-flower-crowns.jpg" alt="Two smiling cats weaing daisy-like flower crowns cuddle together on tree-stumps in a forest." style="width: 100%; padding-top: 20px; padding-bottom: 20px;"> 
-                <figcaption style="position: relative; bottom: 15px;"> 
+                <figcaption style="position: relative; bottom: 15px; padding-bottom: 25px;"> 
                     <a href="https://www.tumblr.com/cybergata/121802161240/shironeko-kuro-mimi-toro-and-a-chibi-brother" target="_blank" rel="noopener noreferrer">Image Source</a>
                 </figcaption>
             </figure>
-
-        <p style="background-color: yellow;"> reorder, probably add more photos </p>
 
 
 
