--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -24,17 +24,17 @@
             <button class="close-button" onclick="toggleMenu()">&times;</button>
             <ul class="menu-items">
 
-                <li> <a href="../index.html">Home</a> </li>
+                <a href="../index.html"> <li> Home </li> </a>
 
-                <li> <a href="about.html">About</a> </li>
+                <a href="about.html"> <li>About</li> </a> 
 
-                <li> <a href="intro-to-alt-text.html">An introduction to alt text</a> </li>
+                <a href="intro-to-alt-text.html"> <li>An introduction to alt text</li> </a> 
 
-                <!-- <li> <a href="workshop.html">Workshop</a> </li> -->
+                <!-- <a href="workshop.html"> <li> Workshop </li> </a> -->
 
-                <li> <a href="practice.html">Practice</a> </li>
+                <a href="practice.html"> <li>Practice</li> </a> 
 
-                <li> <a href="resource-library.html">Resource Library</a> </li>
+                <a href="resource-library.html"> <li>Resource Library</li> </a> 
 
             </ul>
         </div>
@@ -44,7 +44,7 @@
 
     <div class="middle-section" style="border-right: none;">
         <div class="main-text-container">
-        <h1 style="text-align: center; margin-bottom: 20px;"> Resource Library / Sources </h1>
+        <h1 style="text-align: center; margin-bottom: 20px; position: relative; right: 6.5px;"> Resource Library / Sources </h1>
 
         <!-- <ul>
             <li> 
@@ -71,14 +71,6 @@
                 <ul>
                     <li>
                 article by <a href="https://veroniiiica.com/" target="_blank" rel="noreferrer noopener">Veronica Lewis / Veronica With Four Eyes </a>
-                    </li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="https://accessibility.huit.harvard.edu/describe-content-images" target="_blank" rel="noreferrer noopener"> Write helpful Alt Text to describe images</a>
-                <ul>
-                    <li>Article from Digital Accessibility Services at Harvard University
                     </li>
                 </ul>
             </li>
