--- a/html/intro-to-alt-text.html
+++ b/html/intro-to-alt-text.html
@@ -84,7 +84,7 @@
         </div> <!-- image center -->
 
         <p> The image above (found 
-                        <a href="https://udayton.edu/blogs/onlinelearning/2021/07_07_2021_alttext.php"> here on this website</a>)
+                        <a href="https://udayton.edu/blogs/onlinelearning/2021/07_07_2021_alttext.php" target="_blank" rel="noreferrer noopener"> here on this website</a>)
                         shows what happens when an image doesn't load correctly. If there is alt text provided for the image, the viewer can still find out what information you're trying to provide.
                     </p>
 
@@ -368,7 +368,7 @@
                 <figure class="image-center">
                         <img src="../pics/tree-frog.jpg" alt=" " style="width: 60%; padding-top: 20px; padding-bottom: 20px;">
                     </a>
-                        <figcaption style="text-align: left;"> "Close-up shot of a small, green treefrog clinging to the center of an orange flower."
+                        <figcaption style="text-align: left; padding-left: 10px;"> "Close-up shot of a small, green treefrog clinging to the center of an orange flower."
                             <a href="https://www.freepik.com/free-photo/australian-white-tree-frog-sitting-flower_17721898.htm#query=orange%20frog&position=0&from_view=keyword&track=ais&uuid=98768eff-119a-4064-bbae-ce52fbece170"> (Image by kuritafsheen77</a> on Freepik)
                         </figcaption>
                         </figure>
@@ -381,7 +381,7 @@
             
                         <figure class="image-center">
                             <img src="../pics/dog-getting-kisses-by-cows.jpg" alt=" " style="width: 50%; padding-top: 40px; padding-bottom: 20px;">
-                            <figcaption style="text-align: left;"> "A dog wears an enormous smile while getting kisses and attention from a group of cows." <br>
+                            <figcaption style="text-align: left; padding-left: 10px;"> "A dog wears an enormous smile while getting kisses and attention from a group of cows." 
                                 <a href="https://www.are.na/block/623323" target="_blank" rel="noreferrer noopener"> Image source </a>
                                 </figcaption>
                         </figure>
