--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -227,7 +227,7 @@
         
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-        <p>(Click to pause GIF)</p>
+        <p>(Click on GIF to pause)</p>
         <p>GIF description: Looney Tunes ending credits. The words "That's all, folks!" appear in white, cursive letters in front of a circular, black and red background.
 
     </div>
