--- a/html/practice.html
+++ b/html/practice.html
@@ -19,6 +19,12 @@
 
 <div class="main-container">
 
+    <div class="mobile-tablet">
+        <p style="padding: 20px;">Please view <br> <i>https://andrewsmr2.github.io/one-thousand-words/ </i> <br> on a laptop / desktop computer. <br>
+        Thanks!
+        </p>
+    </div>
+
     <div class="left-section">
         <div class="top-menu" id="topMenu">
             <button class="menu-button move-text" onclick="toggleMenu()"> &#9776; Menu </button>
