--- a/html/geese-in-golden-sky.html
+++ b/html/geese-in-golden-sky.html
@@ -22,6 +22,12 @@
 
     <div class="main-container">
 
+        <div class="mobile-tablet">
+            <p style="padding: 20px;">Please view <br> <i>https://andrewsmr2.github.io/one-thousand-words/ </i> <br> on a laptop / desktop computer. <br>
+            Thanks!
+            </p>
+        </div>
+
         <div class="left-section">
             <div class="top-menu" id="topMenu">
                 <button class="menu-button move-text" onclick="toggleMenu()"> &#9776; Menu </button>
@@ -43,14 +49,12 @@
                 </ul>
             </div>
     
-            <img src="../pics/scans/practice-photo-left.jpg" alt="" style="width: 20vw; height: 100%;">
+            <!-- <img src="../pics/scans/practice-photo-left.jpg" alt="" style="width: 20vw; height: 100%;"> -->
         </div>
 
-    <div class="middle-section" style="display: flex; flex-direction: column; justify-content: center; align-items: center; padding-bottom: 20px;">
+    <div class="middle-section middle-section-practice-photos" style="padding-bottom: 170px;">
 
-        <button class="back">
-            <a href="../html/practice.html">Back to main Practice page</a>
-        </button>
+        <h1 style="text-align: center; margin-bottom: 20px;"> Practice</h1>
 
     <p class="instructions">If you were writing alt text or an image description of the photo below, what would you write? It's okay if this feels clumsy at first, that's normal!
     </p>
@@ -64,9 +68,6 @@
             </li>
 
             <li>How would you describe this photo to a friend? A stranger?
-            </li>
-
-            <li style="background-color: yellow;">I need to make sure I'm not fully copying alt text as poetry here
             </li>
         </ul>
     </p> 
@@ -91,6 +92,10 @@
         <button id="submit-button">Submit</button>
         <div id="output"></div>
     </div>
+
+    <button class="back">
+        <a href="../html/practice.html">Back to main Practice page</a>
+    </button>
 
     <!-- <div class="next-page">
         
@@ -130,7 +135,7 @@
         </div>
     </div>
 
-    <img src="../pics/scans/practice-photo-right.jpg" alt="" style="width: 20vw; height: 100%;">
+    <!-- <img src="../pics/scans/practice-photo-right.jpg" alt="" style="width: 20vw; height: 100%;"> -->
 </div>
 
 </div>
